animation on safari fixed

--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -1,6 +1,3 @@
-:root {
-  --img-left: -20%;
-}
 body {
   min-height: 100vh;
   padding-bottom: 80px;
@@ -39,18 +36,55 @@ nav {
 }
 .header-bg {
   position: absolute;
-  width: 120%;
-  top: 50%;
-  transform: translateY(-50%);
-  animation: bgAnimate 50s linear alternate infinite;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: left;
+  -webkit-animation: bgAnimate 30s linear alternate infinite;
+  -moz-animation: bgAnimate 30s linear alternate infinite;
+  -ms-animation: bgAnimate 30s linear alternate infinite;
+  -o-animation: bgAnimate 30s linear alternate infinite;
+  animation: bgAnimate 30s linear alternate infinite;
   z-index: -1;
+}
+@-webkit-keyframes bgAnimate {
+  0% {
+    object-position: left;
+  }
+  100% {
+    object-position: right;
+  }
+}
+@-moz-keyframes bgAnimate {
+  0% {
+    object-position: left;
+  }
+  100% {
+    object-position: right;
+  }
+}
+@-ms-keyframes bgAnimate {
+  0% {
+    object-position: left;
+  }
+  100% {
+    object-position: right;
+  }
+}
+@-o-keyframes bgAnimate {
+  0% {
+    object-position: left;
+  }
+  100% {
+    object-position: right;
+  }
 }
 @keyframes bgAnimate {
   0% {
-    left: 0;
+    object-position: left;
   }
   100% {
-    left: var(--img-left);
+    object-position: right;
   }
 }
 .header-txt {
@@ -151,16 +185,10 @@ footer {
   }
 }
 @media only screen and (max-width: 600px) {
-  :root {
-    --img-left: -90%;
-  }
   .nav-btn-Faq {
     font-size: 1.2rem;
     margin: 0;
     width: 150px;
-  }
-  .header-bg {
-    width: 200%;
   }
   .contactUs-title {
     font-size: 1.3rem;
@@ -170,9 +198,6 @@ footer {
   }
 }
 @media only screen and (max-width: 450px) {
-  .header-bg {
-    width: 250%;
-  }
   .details,
   .contactUs {
     width: 300px;
